[gd_scene load_steps=14 format=3 uid="uid://dfhg53fcfgcqo"]

[ext_resource type="Texture2D" uid="uid://ca2ewrg5t68t1" path="res://assets/ui/Background.png" id="1_0dkrt"]
[ext_resource type="Script" uid="uid://j47t0gok7mva" path="res://ui/main_menu.gd" id="1_arv2f"]
[ext_resource type="Texture2D" uid="uid://hcq6eicyp745" path="res://assets/game_logo.png" id="2_wk0pr"]
[ext_resource type="Texture2D" uid="uid://x37mmgvco24n" path="res://assets/ui/PLAY BUTTON.png" id="3_wk0pr"]
[ext_resource type="Texture2D" uid="uid://c41nwf271vcit" path="res://assets/ui/OPTIONS BUTTON.png" id="4_8uxxo"]
[ext_resource type="Texture2D" uid="uid://dymcck0ecvxk7" path="res://assets/ui/EXIT BUTTON.png" id="5_ei257"]
[ext_resource type="Texture2D" uid="uid://ccjqe8qxp7ew6" path="res://assets/ui/note_ui.png" id="6_ei257"]
[ext_resource type="FontFile" uid="uid://dbe5v4xvw3qtt" path="res://assets/Pixelify_Sans/PixelifySans-Regular.ttf" id="7_p8ri8"]
[ext_resource type="Texture2D" uid="uid://j6y6wnc8itkw" path="res://assets/Grabber.png" id="8_ubpvv"]

[sub_resource type="LabelSettings" id="LabelSettings_ubpvv"]
font = ExtResource("7_p8ri8")
font_size = 64
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_arv2f"]
font = ExtResource("7_p8ri8")
font_size = 40
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_arv2f"]
bg_color = Color(0, 0, 0, 1)
draw_center = false
border_width_top = 26
border_width_right = 373
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5klac"]
bg_color = Color(0.6, 0.40784314, 0.34901962, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_arv2f")

[node name="MainMenuContainer" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="MainMenuContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_0dkrt")

[node name="Title" type="TextureRect" parent="MainMenuContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_right = 320.0
offset_bottom = 360.0
grow_horizontal = 2
texture = ExtResource("2_wk0pr")

[node name="Main" type="VBoxContainer" parent="MainMenuContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.68
anchor_right = 0.5
anchor_bottom = 0.68
offset_left = -98.0
offset_top = -151.0
offset_right = 98.0
offset_bottom = 151.00006
grow_horizontal = 2
grow_vertical = 2

[node name="TextureButton" type="TextureButton" parent="MainMenuContainer/Main"]
layout_mode = 2
texture_normal = ExtResource("3_wk0pr")
stretch_mode = 0

[node name="TextureButton2" type="TextureButton" parent="MainMenuContainer/Main"]
layout_mode = 2
texture_normal = ExtResource("4_8uxxo")

[node name="TextureButton3" type="TextureButton" parent="MainMenuContainer/Main"]
layout_mode = 2
texture_normal = ExtResource("5_ei257")

[node name="SettingsContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="SettingsContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="SettingsContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -501.0
offset_top = -302.0
offset_right = 501.0
offset_bottom = 302.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_ei257")

[node name="SettingsLabel" type="Label" parent="SettingsContainer/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
offset_left = -143.5
offset_right = 143.5
offset_bottom = 157.0
grow_horizontal = 2
text = "Settings
"
label_settings = SubResource("LabelSettings_ubpvv")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsContainer/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -88.5
offset_right = 93.0
offset_bottom = 88.5
grow_horizontal = 2
grow_vertical = 2

[node name="MusicContainer" type="HBoxContainer" parent="SettingsContainer/TextureRect/VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="SettingsContainer/TextureRect/VBoxContainer/MusicContainer"]
layout_mode = 2
text = "Music                    
"
label_settings = SubResource("LabelSettings_arv2f")

[node name="MusicSlider" type="HSlider" parent="SettingsContainer/TextureRect/VBoxContainer/MusicContainer"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("8_ubpvv")
theme_override_icons/grabber_highlight = ExtResource("8_ubpvv")
theme_override_icons/grabber_disabled = ExtResource("8_ubpvv")
theme_override_icons/tick = ExtResource("8_ubpvv")
theme_override_styles/slider = SubResource("StyleBoxFlat_arv2f")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_5klac")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_5klac")
max_value = 1.0
step = 0.001
value = 1.0

[node name="SFXContainer" type="HBoxContainer" parent="SettingsContainer/TextureRect/VBoxContainer"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="SettingsContainer/TextureRect/VBoxContainer/SFXContainer"]
layout_mode = 2
text = "SFX                         
"
label_settings = SubResource("LabelSettings_arv2f")

[node name="SFXSlider" type="HSlider" parent="SettingsContainer/TextureRect/VBoxContainer/SFXContainer"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("8_ubpvv")
theme_override_icons/grabber_highlight = ExtResource("8_ubpvv")
theme_override_icons/grabber_disabled = ExtResource("8_ubpvv")
theme_override_icons/tick = ExtResource("8_ubpvv")
theme_override_styles/slider = SubResource("StyleBoxFlat_arv2f")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_5klac")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_5klac")
max_value = 1.0
step = 0.001
value = 1.0

[node name="BackButton" type="Button" parent="SettingsContainer/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.802
anchor_top = 0.803
anchor_right = 0.88600004
anchor_bottom = 0.859
offset_left = -8.0
offset_top = -4.011963
offset_right = 5.2279663
offset_bottom = 3.1640015
grow_horizontal = 0
grow_vertical = 0
flat = true

[node name="BackLabel" type="Label" parent="SettingsContainer/TextureRect/BackButton"]
layout_mode = 0
offset_right = 94.0
offset_bottom = 101.0
text = "Back
"
label_settings = SubResource("LabelSettings_arv2f")
